--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -49,3 +49,13 @@
 html{
     background-color: #f2f2f2;
 }
+
+.text-message-to {
+    padding: 5px;
+    //margin-right: 0;
+    //float: right;
+    //clear: both;
+    margin-bottom: 5px;
+    //display: block;
+
+}
