--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,7 +18,7 @@
     padding:20px;
     padding-left:50px;
     padding-top:30px;
-    padding-bottom:30px;
+    //padding-bottom:15px;
 }
 
 .text-border{
@@ -58,5 +58,4 @@ html{
     //clear: both;
     margin-bottom: 5px;
     //display: block;
-
 }
