--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11429,6 +11429,10 @@ label.panel-block:hover {
   border-radius: 10px;
 }
 
+.margin {
+  margin: 8px;
+}
+
 .center {
   text-align: center;
 }
@@ -11447,7 +11451,14 @@ html {
 }
 
 .text-message-to {
-  padding: 5px;
-  margin-bottom: 5px;
+  padding: 8px;
+  margin-bottom: 8px;
+  justify-content: left;
+}
+
+.text-message-from {
+  margin-bottom: 8px;
+  padding: 8px;
+  justify-content: right;
 }
 
